--- a/Laboratorium_4.ipynb
+++ b/Laboratorium_4.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:54ab0bbd7bb60fd5922e57d31c4927d3c209adc0b5a0581cc0d6cbf8b027938b"
+  "signature": "sha256:3c75d4cc6afb6039bf7184a6745f22401996cc0178431c6d96fa13095bae077a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -158,13 +158,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 17,
        "text": [
         "3"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -411,13 +411,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 35,
+       "prompt_number": 10,
        "text": [
         "\"Warszawa\""
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -445,35 +445,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "numer = /^\\d(2)/.match(\"12 2 123 123\", \"22 23 32 654\")\n",
-      "\n"
+      "numer = /^(\\d{2})(\\d{7})/.match(\"12 2 123 123\".gsub(/ /,\"\")) \n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "TypeError",
-       "evalue": "no implicit conversion of String into Integer",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[31mTypeError\u001b[0m: no implicit conversion of String into Integer",
-        "\u001b[37m<main>:in `match'\u001b[0m",
-        "\u001b[37m<main>:in `<main>'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:110:in `execute_request'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:62:in `run'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `load'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `<main>'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `eval'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `<main>'\u001b[0m"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 42,
+       "text": [
+        "#<MatchData \"122123123\" 1:\"12\" 2:\"2123123\">"
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 42
     },
     {
      "cell_type": "heading",
@@ -503,10 +489,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ola\" =~ /[AO]la/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -520,10 +518,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ola\" =~ /[AO]la/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -537,11 +547,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Jola\" =~ /[AO]la/"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -556,11 +568,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala\" =~ /[A-Z]la/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 28
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -574,11 +597,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u00d3la\" =~ /[A-Z]la/"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 25
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -626,10 +651,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "/^\\p{Lu}\\p{Ll}*$/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "/^\\p{Lu}\\p{Ll}*$/"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "heading",
@@ -657,10 +694,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"00-700\" =~ /\\d{2}-\\d{3}/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -675,10 +724,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aaa\" =~ /a{2,4}/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
@@ -692,10 +753,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aaaaa\" =~ /a{2,4}/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
@@ -710,10 +783,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aabbbcc\" =~ /ab*c/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "markdown",
@@ -727,10 +812,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aacc\" =~ /ab*c/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 42,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 42
     },
     {
      "cell_type": "markdown",
@@ -745,10 +842,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aabbbcc\" =~ /ab+c/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 43,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "markdown",
@@ -762,10 +871,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"aacc\" =~ /ab+c/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
@@ -780,10 +892,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"-5\" =~ /-?\\d+/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 46,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 46
     },
     {
      "cell_type": "markdown",
@@ -818,10 +942,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "/^\\d{2}-\\d{3}\\s\\p{Lu}\\p{Ll}(-\\p{Lu}\\p{Ll}$/ =~ \"43-300 Bielsko-Bia\u0142a\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 43
     },
     {
      "cell_type": "heading",
@@ -855,10 +982,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\" =~ /^Ala/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 47,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 47
     },
     {
      "cell_type": "markdown",
@@ -872,10 +1011,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"To kot, a to Ala\" =~ /^Ala/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 49
     },
     {
      "cell_type": "markdown",
@@ -890,11 +1032,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\".split(/\\b/)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 30
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 50,
+       "text": [
+        "[\"Ala\", \" \", \"ma\", \" \", \"kota\"]"
+       ]
+      }
+     ],
+     "prompt_number": 50
     },
     {
      "cell_type": "markdown",
@@ -909,10 +1062,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ania i Kasia\" =~ /i/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 51,
+       "text": [
+        "2"
+       ]
+      }
+     ],
+     "prompt_number": 51
     },
     {
      "cell_type": "markdown",
@@ -926,10 +1091,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ania i Kasia\" =~ /\\bi\\b/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 52,
+       "text": [
+        "5"
+       ]
+      }
+     ],
+     "prompt_number": 52
     },
     {
      "cell_type": "heading",
@@ -968,10 +1145,63 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "url = \"http://www.wp.pl:8080/aktualnosci/krakow/1112.html?id=5#tresc\"\n",
+      "puts \"protok\u00f3\u0142: \" + /^\\w+/.match(url).to_s\n",
+      "puts \"host: \" + /w{3}(.\\w+){2}/.match(url).to_s\n",
+      "port = /:\\d{4}/.match(url).to_s\n",
+      "puts \"port: \" + port[1..4]\n",
+      "puts \"\u015bcie\u017cka: \" + /(((\\/{1}\\w[^w{3}]+)+).\\w+).\\w+/.match(url).to_s\n",
+      "puts \"zapytanie: \" + /\\w+=\\w+/.match(url).to_s\n",
+      "puts \"fragment: \" + /\\w+$/.match(url).to_s"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "protok\u00f3\u0142: http\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "host: www.wp.pl\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "port: 8080\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\u015bcie\u017cka: /aktualnosci/krakow/1112\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "zapytanie: id=5\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "fragment: tresc\n"
+       ]
+      }
+     ],
+     "prompt_number": 39
     }
    ],
    "metadata": {}
