--- a/Laboratorium_5.ipynb
+++ b/Laboratorium_5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:ac180d00417a88ed668da2f58e1523ed57d979c2aa95c991c1ce621769a36b71"
+  "signature": "sha256:e68844aa5c1e0d66a529b4f1df7d740ffb29efa4c58e2a525a538e33b9cc2c5f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -46,10 +46,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_napisow = [\"Ala\", \"ma\", \"kota\"]\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "[\"Ala\", \"ma\", \"kota\"]"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -64,10 +76,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "dziwna_tablica = [\"Ala\", 10, /abc/]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "[\"Ala\", 10, /abc/]"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -85,10 +109,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_napisow = [\"Ala\", \"ma\", \"kota\"]\n",
+      "tablica_napisow[0]\n",
+      "tablica_napisow[1]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "\"ma\""
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -104,10 +142,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "tablica_liczb[2]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "5"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -124,10 +175,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5,6,7,7,8]\n",
+      "tablica_liczb[0..1]\n",
+      "tablica_liczb[1..-1]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "[3, 5, 6, 7, 7, 8]"
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -148,10 +213,53 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczba = [1,3,5]\n",
+      "p tablica_liczba\n",
+      "tablica_liczb[30] = 50\n",
+      "p tablica_liczb"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 3, 5]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 3, 5, 6, 7, 7, 8, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 50]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "[1, 3, 5, 6, 7, 7, 8, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, 50]"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -168,11 +276,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "tablica_liczb[1..2] = [2,4,6]\n",
+      "tablica_liczb\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "[1, 2, 4, 6]"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -189,10 +310,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,3,5]\n",
+      "tablica_liczb[1...1] = [2,4,6,19]\n",
+      "tablica_liczb"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "[1, 2, 4, 6, 19, 3, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "heading",
@@ -213,11 +348,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tablica = [\"a\", \"b\", \"d\", \"e\"]\n"
+      "tablica = [\"a\", \"b\", \"d\", \"e\"]\n",
+      "tablica[2...2] = [\"c\"]\n",
+      "tablica\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "[\"a\", \"b\", \"c\", \"d\", \"e\"]"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -232,10 +379,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Array.new"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 33,
+       "text": [
+        "[]"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -250,10 +409,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Array.new(5)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 47,
+       "text": [
+        "[nil, nil, nil, nil, nil]"
+       ]
+      }
+     ],
+     "prompt_number": 47
     },
     {
      "cell_type": "markdown",
@@ -268,11 +439,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "Array.new(5,\"a\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 34,
+       "text": [
+        "[\"a\", \"a\", \"a\", \"a\", \"a\"]"
+       ]
+      }
+     ],
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
@@ -287,10 +469,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_napisow = %w(Ala ma kota)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "[\"Ala\", \"ma\", \"kota\"]"
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "heading",
@@ -310,10 +504,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "(\"a\"..\"z\").to_a[10...15]\n",
+      "\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 61,
+       "text": [
+        "[\"k\", \"l\", \"m\", \"n\", \"o\"]"
+       ]
+      }
+     ],
+     "prompt_number": 61
     },
     {
      "cell_type": "heading",
@@ -339,10 +546,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = [1,2,3, 10]\n",
+      "b = [4,5]\n",
+      "a + b"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 63,
+       "text": [
+        "[1, 2, 3, 10, 4, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 63
     },
     {
      "cell_type": "markdown",
@@ -365,10 +586,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = [1,20]\n",
+      "b = [1,3,4,13]\n",
+      "a - b"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 69,
+       "text": [
+        "[20]"
+       ]
+      }
+     ],
+     "prompt_number": 69
     },
     {
      "cell_type": "markdown",
@@ -385,10 +620,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = [1,2,3]\n",
+      "b = [3,4,5]\n",
+      "a + b"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 70,
+       "text": [
+        "[1, 2, 3, 3, 4, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 70
     },
     {
      "cell_type": "markdown",
@@ -405,10 +654,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = [1,2,3]\n",
+      "b = [2,3,4]\n",
+      "a | b"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 71,
+       "text": [
+        "[1, 2, 3, 4]"
+       ]
+      }
+     ],
+     "prompt_number": 71
     },
     {
      "cell_type": "markdown",
@@ -424,10 +687,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = [1,2,3]\n",
+      "b = [2,3,4]\n",
+      "a & b"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 72,
+       "text": [
+        "[2, 3]"
+       ]
+      }
+     ],
+     "prompt_number": 72
     },
     {
      "cell_type": "heading",
@@ -448,11 +725,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "samogloski = [\"y\", \"u\", \"a\", \"i\", \"e\", \"o\"]\n"
+      "samogloski = [\"y\", \"u\", \"a\", \"i\", \"e\", \"o\"]\n",
+      "alfabet = (\"a\"..\"z\").to_a\n",
+      "\n",
+      "od = alfabet.index(\"g\").to_i\n",
+      "doo = alfabet.index(\"z\").to_i\n",
+      "\n",
+      "\n",
+      "puts alfabet[od..doo]&samogloski"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[\"i\", \"o\", \"u\", \"y\"]\n"
+       ]
+      }
+     ],
+     "prompt_number": 104
     },
     {
      "cell_type": "heading",
