--- a/Laboratorium_5.ipynb
+++ b/Laboratorium_5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:e68844aa5c1e0d66a529b4f1df7d740ffb29efa4c58e2a525a538e33b9cc2c5f"
+  "signature": "sha256:6b02b2b75ad37cbaf0b8f56c5b283247927ef3c2bb029433df7d3589586d2072"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -770,10 +770,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [1,2,3,8]\n",
+      "tablica << 4\n",
+      "tablica"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 106,
+       "text": [
+        "[1, 2, 3, 8, 4]"
+       ]
+      }
+     ],
+     "prompt_number": 106
     },
     {
      "cell_type": "markdown",
@@ -790,10 +804,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [1,2,3,8]\n",
+      "tablica.push(4)\n",
+      "tablica"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 108,
+       "text": [
+        "[1, 2, 3, 8, 4]"
+       ]
+      }
+     ],
+     "prompt_number": 108
     },
     {
      "cell_type": "markdown",
@@ -815,10 +843,57 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [1,2,3]\n",
+      "tablica.push(5)\n",
+      "tablica.push(7)\n",
+      "p tablica\n",
+      "tablica.pop\n",
+      "tablica.pop\n",
+      "tablica.pop\n",
+      "p tablica"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 2, 3, 5, 7]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 2]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 109,
+       "text": [
+        "[1, 2]"
+       ]
+      }
+     ],
+     "prompt_number": 109
     },
     {
      "cell_type": "markdown",
@@ -840,10 +915,71 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = []\n",
+      "tablica.push(1)\n",
+      "tablica.push(3)\n",
+      "tablica.push(5)\n",
+      "tablica.push(7)\n",
+      "p tablica.shift\n",
+      "p tablica.shift\n",
+      "p tablica.shift"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "5"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 110,
+       "text": [
+        "5"
+       ]
+      }
+     ],
+     "prompt_number": 110
     },
     {
      "cell_type": "markdown",
@@ -859,11 +995,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [1,2,3,4]\n",
+      "tablica.reverse"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 111,
+       "text": [
+        "[4, 3, 2, 1]"
+       ]
+      }
+     ],
+     "prompt_number": 111
     },
     {
      "cell_type": "heading",
@@ -883,10 +1031,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "alfabet = (\"a\"..\"z\").to_a.reverse"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 112,
+       "text": [
+        "[\"z\", \"y\", \"x\", \"w\", \"v\", \"u\", \"t\", \"s\", \"r\", \"q\", \"p\", \"o\", \"n\", \"m\", \"l\", \"k\", \"j\", \"i\", \"h\", \"g\", \"f\", \"e\", \"d\", \"c\", \"b\", \"a\"]"
+       ]
+      }
+     ],
+     "prompt_number": 112
     },
     {
      "cell_type": "heading",
@@ -910,10 +1070,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica_liczb = [1,2,3]\n",
+      "tablica_liczb.size"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 113,
+       "text": [
+        "3"
+       ]
+      }
+     ],
+     "prompt_number": 113
     },
     {
      "cell_type": "markdown",
@@ -929,10 +1102,51 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "p [].empty?\n",
+      "p [1,2,3].empty?"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "true"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "false"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 114,
+       "text": [
+        "false"
+       ]
+      }
+     ],
+     "prompt_number": 114
     },
     {
      "cell_type": "markdown",
@@ -948,10 +1162,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [3,4,5]\n",
+      "tablica.first"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 115,
+       "text": [
+        "3"
+       ]
+      }
+     ],
+     "prompt_number": 115
     },
     {
      "cell_type": "markdown",
@@ -967,10 +1194,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [3,4,5]\n",
+      "tablica.last"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 116,
+       "text": [
+        "5"
+       ]
+      }
+     ],
+     "prompt_number": 116
     },
     {
      "cell_type": "heading",
@@ -993,10 +1233,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[1,2,nil,5,nil,nil].compact"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 117,
+       "text": [
+        "[1, 2, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 117
     },
     {
      "cell_type": "markdown",
@@ -1011,10 +1263,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[1,1,3,nil,nil,3,5,5,5].uniq"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 118,
+       "text": [
+        "[1, 3, nil, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 118
     },
     {
      "cell_type": "markdown",
@@ -1031,11 +1295,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [1,2,3,5,5,2]\n",
+      "tablica.delete(2)\n",
+      "tablica"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 119,
+       "text": [
+        "[1, 3, 5, 5]"
+       ]
+      }
+     ],
+     "prompt_number": 119
     },
     {
      "cell_type": "markdown",
@@ -1052,7 +1329,11 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [3,4,5,6]\n",
+      "tablica.delete_at(2)\n",
+      "tablica"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -1071,11 +1352,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tablica = [3,4,5]\n",
+      "tablica.join(\" - \")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 120,
+       "text": [
+        "\"3 - 4 - 5\""
+       ]
+      }
+     ],
+     "prompt_number": 120
     },
     {
      "cell_type": "heading",
@@ -1097,7 +1390,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tablica = [4, 7, 8, nil, 10, 3, nil, 3, 4, nil, 6]\n"
+      "tablica = [4, 7, 8, nil, 10, 3, nil, 3, 4, nil, 6]\n",
+      "tablica.compact"
      ],
      "language": "python",
      "metadata": {},
