po mniej niż 6 zadaniach

--- a/Laboratorium_5.ipynb
+++ b/Laboratorium_5.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:6b02b2b75ad37cbaf0b8f56c5b283247927ef3c2bb029433df7d3589586d2072"
+  "signature": "sha256:b0dcc9965781f41e5b49a0482e6ff0dc40700f00e25697364fa66a4682ea7777"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -728,11 +728,11 @@
       "samogloski = [\"y\", \"u\", \"a\", \"i\", \"e\", \"o\"]\n",
       "alfabet = (\"a\"..\"z\").to_a\n",
       "\n",
-      "od = alfabet.index(\"g\").to_i\n",
-      "doo = alfabet.index(\"z\").to_i\n",
+      "od = alfabet.index(\"g\")\n",
+      "doo = alfabet.index(\"z\")\n",
       "\n",
       "\n",
-      "puts alfabet[od..doo]&samogloski"
+      "puts alfabet[od..-1]&samogloski"
      ],
      "language": "python",
      "metadata": {},
@@ -745,7 +745,7 @@
        ]
       }
      ],
-     "prompt_number": 104
+     "prompt_number": 123
     },
     {
      "cell_type": "heading",
@@ -1391,11 +1391,21 @@
      "collapsed": false,
      "input": [
       "tablica = [4, 7, 8, nil, 10, 3, nil, 3, 4, nil, 6]\n",
-      "tablica.compact"
+      "tablica.compact.uniq.sort"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 122,
+       "text": [
+        "[3, 4, 6, 7, 8, 10]"
+       ]
+      }
+     ],
+     "prompt_number": 122
     }
    ],
    "metadata": {}
