po mniej niż 6 zadaniach

--- a/Laboratorium_6.ipynb
+++ b/Laboratorium_6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:204f20ec96271bb9ad0ac580eee465e7a39a16571f47637899a8b824813b78af"
+  "signature": "sha256:048ebf06d2ad3768d9bb06e7a9922669c2498e38e63ccb5c23ae2731b28e41ba"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2377,7 +2377,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "[1,2,3,4].inject(0){|suma,element| suma + element }"
+      "[1,2,3,4].inject(10){|suma,element| suma + element }"
      ],
      "language": "python",
      "metadata": {},
@@ -2385,13 +2385,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 24,
        "text": [
-        "10"
+        "20"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -2406,11 +2406,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[\"Ala\", \"Anna\", \"Agata\"].inject(\"\"){|wynik,imie| wynik + \" #{imie.upcase}\" }"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 25,
+       "text": [
+        "\" ALA ANNA AGATA\""
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -2426,10 +2437,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[3,1,7,6,2].sort"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "[1, 2, 3, 6, 7]"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -2445,11 +2468,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[\"A\",\"ca\u0142ego\",\"ma\u0142e\",\"Ala\",\"Be\"].sort{|a,b| a.size <=> b.size }"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "[\"A\", \"Be\", \"Ala\", \"ma\u0142e\", \"ca\u0142ego\"]"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -2464,10 +2498,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[\"A\",\"ca\u0142ego\",\"ma\u0142e\",\"Ala\",\"Be\"].sort"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 29,
+       "text": [
+        "[\"A\", \"Ala\", \"Be\", \"ca\u0142ego\", \"ma\u0142e\"]"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -2483,10 +2529,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "[\"A\",\"ca\u0142ego\",\"ma\u0142e\",\"Ala\",\"Be\"].sort_by{|a| a.size }"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "[\"A\", \"Be\", \"Ala\", \"ma\u0142e\", \"ca\u0142ego\"]"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "heading",
@@ -2507,12 +2565,34 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "liczba = 1456323465\n"
+      "liczba = 1456323465\n",
+      "liczba.split(/\\d{1}/)\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
+     "outputs": [
+      {
+       "ename": "NoMethodError",
+       "evalue": "undefined method `split' for 1456323465:Fixnum",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[31mNoMethodError\u001b[0m: undefined method `split' for 1456323465:Fixnum",
+        "\u001b[37m<main>:1:in `<main>'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:110:in `execute_request'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:62:in `run'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `load'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `<main>'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `eval'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `<main>'\u001b[0m"
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "heading",
