po mniej niż 6 zadaniach

--- a/Laboratorium_6.ipynb
+++ b/Laboratorium_6.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:048ebf06d2ad3768d9bb06e7a9922669c2498e38e63ccb5c23ae2731b28e41ba"
+  "signature": "sha256:41f9e8156b1d78c7dd9a620ef5042e06d5a7504ee4ca87e1724912a1ab0431b2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2566,33 +2566,21 @@
      "collapsed": false,
      "input": [
       "liczba = 1456323465\n",
-      "liczba.split(/\\d{1}/)\n"
+      "liczba.to_s.split('').map(&:to_i).\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "ename": "NoMethodError",
-       "evalue": "undefined method `split' for 1456323465:Fixnum",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[31mNoMethodError\u001b[0m: undefined method `split' for 1456323465:Fixnum",
-        "\u001b[37m<main>:1:in `<main>'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:110:in `execute_request'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:62:in `run'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `load'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `<main>'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `eval'\u001b[0m",
-        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `<main>'\u001b[0m"
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "[1, 4, 5, 6, 3, 2, 3, 4, 6, 5]"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 36
     },
     {
      "cell_type": "heading",
